Fix overflowing urlbar

--- a/theme/parts/headerbar-urlbar.css
+++ b/theme/parts/headerbar-urlbar.css
@@ -23,11 +23,7 @@ toolbarspring {
 }
 
 #urlbar[breakout][breakout-extend] {
-	left: 0 !important;
-	top: 0 !important;
-	width: 100% !important;
-	z-index: 5 !important;
-	padding: 0 !important;
+  width: var(--urlbar-width);
 }
 #urlbar[breakout][breakout-extend][open] {
 	height: auto !important;
@@ -35,6 +31,7 @@ toolbarspring {
 }
 #urlbar #urlbar-input-container {
 	padding: 0 !important;
+  width: 100%;
 }
 #urlbar[breakout][breakout-extend] #urlbar-input-container {
 	height: 30px !important;
